--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.103.1"}
 sentence-transformers = "^2.2.2"
 docarray = {extras = ["full"], version = "^0.38.0"}
+rich = "^13.5.3"
 
 
 [build-system]
